--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
             wiggle: {
               '0%, 100%': { transform: 'rotate(-3deg)' },
               '50%': { transform: 'rotate(3deg)' },
+            },
+            scan: {
+              '0%': { top: '0%' },
+              '100%': { top: '100%' },
             }
           }
         },
