--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
   <!-- Font Awesome for Socials -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 
+  <!-- Puter.js for AI Text-to-Speech -->
+  <script src="https://js.puter.com/v2/"></script>
+
   <!-- Tailwind Configuration -->
   <script>
     tailwind.config = {
